--- a/package.json
+++ b/package.json
@@ -22,21 +22,27 @@
         "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/camera": "^4.2.1",
         "@ionic-native/core": "3.12.1",
+        "@ionic-native/push": "^4.2.1",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
+        "@ionic-native/transfer": "^3.14.0",
         "@ionic/storage": "2.0.1",
         "cordova-android": "^6.2.3",
         "cordova-plugin-camera": "^2.4.1",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-file": "^4.3.3",
+        "cordova-plugin-file-transfer": "^1.6.3",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
+        "font-awesome": "^4.7.0",
         "ionic-angular": "3.6.0",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "ngx-cookie": "^1.0.0",
+        "phonegap-plugin-push": "^2.0.0",
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.12"
@@ -50,7 +56,9 @@
     },
     "description": "An Ionic project",
     "config": {
-        "ionic_webpack": "./config/webpack.config.js"
+        "ionic_webpack": "./config/webpack.config.js",
+        "ionic_copy": "./config/copy.config.js",
+        "ionic_sass": "./config/sass.config.js"
     },
     "cordova": {
         "plugins": {
@@ -60,7 +68,9 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-file-transfer": {},
+            "phonegap-plugin-push": {}
         },
         "platforms": [
             "android"
