--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/platform-browser-dynamic": "4.1.3",
         "@ionic-native/camera": "^4.2.1",
         "@ionic-native/core": "3.12.1",
+        "@ionic-native/deeplinks": "^4.2.1",
         "@ionic-native/push": "^4.2.1",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
@@ -36,13 +37,15 @@
         "cordova-plugin-file-transfer": "^1.6.3",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
-        "cordova-plugin-whitelist": "^1.3.1",
+        "cordova-plugin-whitelist": "^1.3.2",
         "font-awesome": "^4.7.0",
         "ionic-angular": "3.6.0",
+        "ionic-plugin-deeplinks": "^1.0.15",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
+        "moment": "^2.18.1",
         "ngx-cookie": "^1.0.0",
-        "phonegap-plugin-push": "^2.0.0",
+        "phonegap-plugin-push": "~2.0.0",
         "rxjs": "5.4.0",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.12"
@@ -67,10 +70,30 @@
             "cordova-plugin-device": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
             "cordova-plugin-file-transfer": {},
-            "phonegap-plugin-push": {}
+            "phonegap-plugin-push": {
+                "SENDER_ID": "428820040706"
+            },
+            "cordova-plugin-whitelist": {},
+            "ionic-plugin-deeplinks": {
+                "URL_SCHEME": "myapp",
+                "DEEPLINK_SCHEME": "https",
+                "DEEPLINK_HOST": "lineup-app.com",
+                "ANDROID_PATH_PREFIX": "",
+                "ANDROID_2_PATH_PREFIX": "/",
+                "ANDROID_3_PATH_PREFIX": "/",
+                "ANDROID_4_PATH_PREFIX": "/",
+                "ANDROID_5_PATH_PREFIX": "/",
+                "DEEPLINK_2_SCHEME": " ",
+                "DEEPLINK_2_HOST": " ",
+                "DEEPLINK_3_SCHEME": " ",
+                "DEEPLINK_3_HOST": " ",
+                "DEEPLINK_4_SCHEME": " ",
+                "DEEPLINK_4_HOST": " ",
+                "DEEPLINK_5_SCHEME": " ",
+                "DEEPLINK_5_HOST": " "
+            }
         },
         "platforms": [
             "android"
