--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@ionic-native/status-bar": "3.12.1",
         "@ionic-native/transfer": "^3.14.0",
         "@ionic/storage": "2.0.1",
+        "chart.js": "^2.7.0",
         "cordova-android": "^6.2.3",
         "cordova-plugin-camera": "^2.4.1",
         "cordova-plugin-compat": "^1.1.0",
@@ -44,6 +45,7 @@
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "moment": "^2.18.1",
+        "ng2-charts": "^1.6.0",
         "ngx-cookie": "^1.0.0",
         "phonegap-plugin-push": "~2.0.0",
         "rxjs": "5.4.0",
